fix: avoid overlap of long messages in login screen

--- a/Goobi/src/main/webapp/uii/templatePG/css/src/pages/_login-logout.scss
+++ b/Goobi/src/main/webapp/uii/templatePG/css/src/pages/_login-logout.scss
@@ -48,7 +48,6 @@
 	align-items: center;
     color: black;
 	display: flex;
-	height: 17rem;
 	max-height: 80vh;
 }
 
